crates/macros/tests/regression/ui/purity_pure_mut_self.rs
use jacquard_macros::purity;

#[purity(pure)]
pub trait InvalidPureTrait {
    fn mutate(&mut self);
}

fn main() {}
